# vrEmu6502

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  msbuild.yml  tests-msbuild.yml  tests-win64.yml
msvc/: vrEmu6502.sln
msvc/vrEmu6502/: vrEmu6502.vcxproj  vrEmu6502.vcxproj.filters
msvc/vrEmu6502Test/: vrEmu6502Test.vcxproj  vrEmu6502Test.vcxproj.filters
src/: CMakeLists.txt  vrEmu6502.c  vrEmu6502.h
test/: CMakeLists.txt  README.md  test.bat  vrEmu6502Test.c
test/programs/: 6502_decimal_test.a65  6502_decimal_test.hex  6502_decimal_test.lst  65C02_extended_opcodes_test.a65c  65C02_extended_opcodes_test.hex  65C02_extended_opcodes_test.lst
